pridanie popisu pre knihy a fotky pre knihy
